# TLPH

./: .env.example  .gitignore  CHANGELOG.md  FIREBASE_SETUP.md  FIREBASE_SETUP_GUIDE.md  FIREBASE_TRANSACTIONS_SETUP.md  README.md  XENDIT_SETUP.md  __version__.py  app.py  config.py  fbjson.md  fbjson.txt  firebase_config.py  pyproject.toml  requirements.txt  setup.py  transaction_storage.py
.github/workflows/: codeql.yml  fortify.yml
routes/: api_routes.py  environment_routes.py  farm_routes.py  fisheries_routes.py  forest_routes.py  livestock_routes.py  main_routes.py  municipal_routes.py  national_routes.py  payments_routes.py  permits_routes.py  regional_routes.py  seminar_routes.py  service_routes.py  superadmin_routes.py  wildlife_routes.py
static/: daily-tribune_import_wp-content_uploads_2022_12_DENR.avif
static/css/: auth.css  seminar.css  style.css
static/js/: auth.js  firebase-config.js  home.js  license-firebase-storage.js  license-payment.js  main.js  ph-locations.js  service-auto-handler.js  service-request-handler.js
templates/: about.html  application.html  approval_status.html  create-admin.html  create-firebase-admins.html  create-municipal-admin.html  create_regional_account.html  dashboard.html  farmer_dashboard.html  fix-admin-roles.html  header.html  home.html  index.html  inventory.html  login.html  payment-failed.html  payment-form.html  payment-success.html  signup.html
templates/municipal/: header.html  landing-municipal.html  municipal-profile.html  notification.html  sidenav.html
templates/national/: appications-national.html  (+11 more)
(+155 files in other folders)
