[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tlph-inventory"
dynamic = ["version"]
description = "A Flask-based inventory management system"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "TLPH Development Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Flask",
]
dependencies = [
    "Flask==3.0.0",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-Mail==0.9.1",
    "python-dotenv==1.0.0",
    "firebase-admin==6.4.0",
    "pyrebase4==4.7.1",
]

[project.urls]
Homepage = "https://github.com/alqzdave/TLPH"
Repository = "https://github.com/alqzdave/TLPH"

[project.scripts]
tlph = "app:main"

[tool.setuptools]
packages = ["models", "routes"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "__version__.__version__"}
